Update version marks and notices in main templates and functions.php

--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 /*
- Theme Name:   Parkour-Festivaali (Twenty Twenty)
+ Theme Name:   Sivistymättömät-festival
  Theme URI:    http://example.com/
- Description:  Twenty Twenty Child Theme (Parkour-festivaali)
+ Description:  Twenty Twenty Child Theme, used in Sivistymättömät Parkour-festival)
  Author:       Jimi Heinonen
  Author URI:   -
  Template:     twentytwenty
- Version:      0.0.5
+ Version:      0.7.0
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
- Tags:         light, one-column, responsive-layout
- Text Domain:  twentytwenty
+ Tags:         light, responsive-layout
+ Text Domain:  sivistymattomat
 */
 
 
