--- a/style.css
+++ b/style.css
@@ -47,6 +47,11 @@ span {
 	flex-align: center;
 	max-width: 80%;
 }
+.footer-nav-widgets-wrapper.header-footer-group .footer-inner.section-inner .footer-widgets a {
+	color: white;
+	font-weight: bold;
+	text-decoration: underline;
+}
 .footer-nav-widgets-wrapper.header-footer-group .footer-inner.section-inner .footer-widgets-outer-wrapper {
 	height: 170px;
 	padding: 20px;
