--- a/style.css
+++ b/style.css
@@ -1,15 +1,19 @@
 /*
- Theme Name:   Sivistymättömät-festival
+ Theme Name:   Sivistymättömät Festival
  Theme URI:    http://example.com/
  Description:  Twenty Twenty Child Theme, used in Sivistymättömät Parkour-festival)
  Author:       Jimi Heinonen
  Author URI:   -
  Template:     twentytwenty
- Version:      0.8.0
+ Version:      1.0.0
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Tags:         light, responsive-layout
  Text Domain:  sivistymattomat
+ 
+ Sivistymattomat Festival theme stylesheet, Copyright 2020 Sivistymättömät workgroup
+ Modifies styles on the parent Wordpress default theme Twenty Twenty, Copyright 2019-2020 WordPress.org
+ Licensed as GPL 2.0 or later
 */
 
 
